--- a/src/sass/partials/_booking.scss
+++ b/src/sass/partials/_booking.scss
@@ -173,6 +173,11 @@
         }
   
       }
+
+      &.selected {
+        background-color: $color-success;
+        border: 2px dotted black;
+      }
     }
   
     [data-table="1"] {
