--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -96,18 +96,74 @@ section {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 5px;  
-    
-    img{
-        width: 30%;
-        height: 131px;
-        object-fit: cover;
+    gap: 5px;
 
-        &:hover {
-            cursor: pointer;
-            opacity: 0.4;
+    .gallery-image {
+        width: 32%;
+        height: 190px;
+        position: relative;
+
+        img {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            border-radius: 5px;
         }
+
+       .overlay {
+            top: 0;
+            left: 0;
+            display: flex;
+            position: absolute;
+            width: 100%;
+            height: 190px;
+            justify-content: center;
+            align-items: center;
+        
+
+            a {
+                text-decoration: none;
+            }
+            
+             i {
+                 position: relative;
+                 color: $color-light;
+                 font-size: 20px;
+                 transition: $transition;
+                 z-index: 1;
+                 display: none;
+                 padding: 5px;
+              }
+
+            i:hover {
+                cursor: pointer;
+                color: $color-main;
+            }
+        }
+
     }
+
+    .gallery-image::after {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        border-radius: $radius;
+        background-color: $color-dark;
+        top: 0;
+        display: none;
+    }
+
+    .gallery-image:hover::after {
+        position: absolute;
+        opacity: 60%;
+        display: block;
+    }
+
+    .gallery-image:hover .overlay i {
+        display: inline;
+    }
+    
 }
 
 
