--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -126,15 +126,22 @@
                 text-decoration: none;
             }
             
-             i {
-                 position: relative;
-                 color: $color-light;
-                 font-size: 20px;
-                 transition: $transition;
-                 z-index: 1;
-                 display: none;
-                 padding: 5px;
-              }
+            i {
+                position: relative;
+                color: $color-light;
+                font-size: 20px;
+                transition: $transition;
+                z-index: 1;
+                display: none;
+                padding: 5px;
+            }
+
+            i.favorite {
+                font-size: 30px;
+                display: inline;
+                color: $color-main;
+            }
+
 
             i:hover {
                 cursor: pointer;
